<resources>
    <string name="app_name">HelloWorld</string>
    <string name="textview">Display</string>
    <string name="button_left">Left</string>
    <string name="confirm_btn">Confirm</string>
    <string name="progress_hint">Please enter value</string>
    <string name="android_radio_btn">Android</string>
    <string name="apple_radio_btn">Apple</string>
    <string name="checkbox1">Chinese</string>
    <string name="checkbox2">Mathmetic</string>
    <string name="checkbox3">Engish</string>
    <string name="image_des">Image</string>
    <string name="button_right">Right</string>
    <string name="switch_switch">Switch</string>
    <string name="viewmode_btn1">+1</string>
    <string name="viewmodel_btn2">+2</string>
    <string name="welcome">Welcome</string>
    <string name="plus_btn">+</string>
    <string name="minus_btn">-</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_textview">Home</string>
    <string name="home_btn">Button</string>
    <string name="detail_textview">Detail</string>
    <string name="detail_btn">Button</string>
    <string name="name">Name</string>
</resources>